--- a/front_end/index.html
+++ b/front_end/index.html
@@ -1,136 +1,53 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="kn">
 <head>
-<meta charset="UTF-8">
-<title>Kannada Speech-to-Text</title>
+    <meta charset="UTF-8">
+    <title>Kannada STT Output Viewer</title>
 
-<style>
-    body {
-        background: #f2f2f2;
-        font-family: "Segoe UI", sans-serif;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-    }
-
-    .container {
-        width: 450px;
-        background: #fff;
-        padding: 30px;
-        border-radius: 12px;
-        box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-        text-align: center;
-    }
-
-    h2 {
-        margin-bottom: 20px;
-        color: #333;
-    }
-
-    .upload-box {
-        border: 2px dashed #555;
-        padding: 30px;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: 0.3s;
-        color: #444;
-    }
-    .upload-box:hover {
-        background: #fafafa;
-        border-color: #0099ff;
-    }
-
-    #fileInput { display: none; }
-
-    button {
-        margin-top: 20px;
-        width: 100%;
-        padding: 12px;
-        border: none;
-        background: #0099ff;
-        color: white;
-        font-size: 16px;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: 0.3s;
-    }
-    button:hover {
-        background: #007acc;
-    }
-
-    .output-box {
-        margin-top: 25px;
-        background: #f9f9f9;
-        border-radius: 8px;
-        padding: 15px;
-        white-space: pre-wrap;
-        text-align: left;
-        font-size: 14px;
-        border: 1px solid #ddd;
-    }
-
-    .loader {
-        display: none;
-        margin-top: 10px;
-        color: #007acc;
-        font-weight: bold;
-    }
-</style>
-
+    <style>
+        body {
+            font-family: "Noto Sans Kannada", Arial, sans-serif;
+            padding: 20px;
+        }
+        .box {
+            background: #f7f7f7;
+            padding: 15px;
+            margin-bottom: 15px;
+            border-radius: 6px;
+            border: 1px solid #ddd;
+            line-height: 1.7;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
 
-<div class="container">
-    <h2>🎙 Kannada Speech-to-Text</h2>
+<h2>Kannada Speech-to-Text Output</h2>
 
-```
-<div class="upload-box" onclick="document.getElementById('fileInput').click()">
-    Click to Upload Audio 🎵<br><br>
-    <small>(WAV, MP3, M4A accepted)</small>
-</div>
+<input type="file" id="fileInput" accept=".json">
+<p>➡ Select <b>output.json</b></p>
 
-<input type="file" id="fileInput" accept="audio/*">
-
-<button onclick="transcribe()">Transcribe</button>
-
-<div class="loader" id="loader">⏳ Transcribing... Please wait</div>
-
-<div class="output-box" id="output"></div>
-```
-
-</div>
+<div class="box" id="text">🗣 Transcribed: </div>
+<div class="box" id="pos">🔠 POS Tags: </div>
+<div class="box" id="verb">✔ Corrected Verb: </div>
+<div class="box" id="final">🔀 Final Sentence: </div>
 
 <script>
-async function transcribe() {
-    const file = document.getElementById("fileInput").files[0];
-    if (!file) {
-        alert("Please upload an audio file!");
-        return;
-    }
+document.getElementById("fileInput").addEventListener("change", function(event) {
+    const file = event.target.files[0];
+    const reader = new FileReader();
 
-    const form = new FormData();
-    form.append("file", file);
+    reader.onload = function(e) {
+        const data = JSON.parse(e.target.result);
 
-    document.getElementById("loader").style.display = "block";
+        document.getElementById("text").innerText = "🗣 Transcribed: " + data.transcribed;
+        document.getElementById("pos").innerText  = "🔠 POS Tags: " + JSON.stringify(data.pos, null, 2);
+        document.getElementById("verb").innerText = "✔ Corrected Verb: " + data.verb;
+        document.getElementById("final").innerText = "🔀 Final Sentence: " + data.final_sentence;
+    };
 
-    try {
-        const res = await fetch("http://localhost:8000/stt", {
-            method: "POST",
-            body: form
-        });
-
-        const data = await res.json();
-        document.getElementById("output").innerText = data.text || JSON.stringify(data, null, 2);
-    } catch (err) {
-        document.getElementById("output").innerText = "⚠ Error connecting to server!";
-    }
-
-    document.getElementById("loader").style.display = "none";
-}
+    reader.readAsText(file);
+});
 </script>
 
 </body>
